--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,7 +1,7 @@
 # Associations
 # comment out the urls if you do not wish to display them
 
-- organization: PETA
+- organization: Università degli Studi di Milano - Bicocca
   role: Volunteer
   year: 2001 &mdash; 2010
   url: https://www.peta.org/
