--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ resume_section_education:       true
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
   resume_github_url:            "https://github.com/lucadanese"
-  resume_twitter_url:           "https://twitter.com/lukedanny11r"
+  resume_twitter_url:           "https://twitter.com/lukedanny11"
   # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
