--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ resume_header_intro: "<p>I'm a Phd student of Statistics at the University of Mi
 
 # Decide which sections to use
 # comment out to hide
-# resume_section_experience:      true
+resume_section_experience:      true
 resume_section_education:       true
 # resume_section_projects:        true
 # resume_section_skills:          true
