--- a/_data/education.yml
+++ b/_data/education.yml
@@ -17,7 +17,8 @@
   uni: University of Milano - Bicocca
   year: 2015 &mdash; 2018
   awards:
-    - award: 
+    - award: Summa Cumme Laude graduate
+  summary: If you had any meaningful roles at college, feel free to write about them here
   
   
   #summary: If you had any meaningful roles at college, feel free to write about them here
