--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,24 +1,13 @@
 # Degree
-- degree: Phd in Statistics
-  uni: University of Milano - Bicocca
-  year: 2021 &mdash; Now
+- degree: Bachelor of Arts, Human Rights
+  uni: Yale University
+  year: 2004 &mdash; 2008
   awards:
     - award: Summa Cumme Laude graduate
   summary: If you had any meaningful roles at college, feel free to write about them here
 
-- degree: MSC in Statistics
-  uni: University of Milano - Bicocca
-  year: 2018 &mdash; 2020
-  #awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
-  
-  - degree: BSC in Statistics
-  uni: University of Milano - Bicocca
-  year: 2015 &mdash; 2018
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
-  
-  
-  #summary: If you had any meaningful roles at college, feel free to write about them here
+- degree: High School Diploma
+  uni: Springfield High School
+  year: 2004
+  award: Most likely to succeed
+  summary: You can choose to have either a single or multiple awards
