--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,13 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
+- degree: PhD in Statistics, Human Rights
+  uni: University of Milano - Bicocca
+  year: 2021 &mdash; Now
   awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+    - award: 
+  summary: 
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: MSc in Statistics
+  uni: University of Milano - Bicocca
+  year: 2018 &mdash; 2020
+  award: 
+  summary: 
