--- a/_data/education.yml
+++ b/_data/education.yml
@@ -6,4 +6,8 @@
 - degree: MSc in Statistics
   uni: University of Milano - Bicocca
   year: 2018 &mdash; 2020
+  
+  - degree: BSc in Statistics
+  uni: University of Milano - Bicocca
+  year: 2015 &mdash; 2018
 
