--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,5 +1,5 @@
 # Degree
-- degree: PhD in Statistics, Human Rights
+- degree: PhD in Statistics
   uni: University of Milano - Bicocca
   year: 2021 &mdash; Now
 
@@ -7,7 +7,7 @@
   uni: University of Milano - Bicocca
   year: 2018 &mdash; 2020
   
-  - degree: BSc in Statistics
+- degree: BSc in Statistics
   uni: University of Milano - Bicocca
   year: 2015 &mdash; 2018
 
