--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         "742 Evergreen Terrace, Springfield"
 resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>I'm a Phd student of Statistics at the University of Milano - Bicocca. I was born in Milan (Italy) where I currently live. I'm interested in Bayesian Nonparametric Statistics and Computational Statistics</p>"
+resume_header_intro: "<p>I'm a Phd student in Statistics at the University of Milano - Bicocca. I was born in Milan (Italy) where I currently live. I'm interested in Bayesian Nonparametric Statistics and Computational Statistics</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
