--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: PhD in Statistics
-  uni: University of Milano - Bicocca
+- degree: University of Milano - Bicocca
+  uni: PhD in Statistics
   year: 2021 &mdash; Now
 
 - degree: MSc in Statistics
