--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,11 +3,11 @@
   uni: PhD in Statistics
   year: 2021 &mdash; Now
 
-- degree: MSc in Statistics
-  uni: University of Milano - Bicocca
+- degree: University of Milano - Bicocca
+  uni: MSc in Statistics
   year: 2018 &mdash; 2020
   
-- degree: BSc in Statistics
-  uni: University of Milano - Bicocca
+- degree: University of Milano - Bicocca
+  uni: BSc in Statistics
   year: 2015 &mdash; 2018
 
