--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ resume_header_intro: "<p>I'm a Phd student in Statistics at the University of Mi
 # comment out to hide
 # resume_section_experience:      true
 resume_section_education:       true
-# resume_section_projects:        true
+resume_section_projects:        true
 # resume_section_skills:          true
 # resume_section_recognition:     true
 # resume_section_links:           true
