--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,17 @@ display_header_contact_info:    "false"
 
 resume_header_intro: "<p>I'm a Phd student in Statistics at the University of Milano - Bicocca. I was born in Milan (Italy) where I currently live. I'm interested in Bayesian Nonparametric Statistics and Computational Statistics</p>"
 
+# Publications section
+
+more_title: Publications 
+
+more_content: |
+    
+    **Articles in referred journals**
+    
+    1. Danese L., Provaa
+
+
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
 # or remove the resume_looking_for_work option entirely
@@ -42,13 +53,6 @@ resume_section_education:       true
 # resume_section_associations:    true
 # resume_section_interests:       true
 
-more_title: Publications 
-
-more_content: |
-    
-    **Articles in referred journals**
-    
-    1. Danese L., Provaa
 
 
 # Resume social links
