--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ more_content: |
     **Articles in referred journals**
     
     1. Corradin R., **Danese L.**, Ongaro A (2022). Bayesian nonparametric change point detection for multivariate time series with missing observations, 
-    *International Journal of Approximate Reasoning*, Volume 143, 2022, Pages 26-43, ISSN 0888-613X, https://doi.org/10.1016/j.ijar.2021.12.019. (https://www.sciencedirect.com/science/article/pii/S0888613X21002231)
+    *International Journal of Approximate Reasoning*, Volume 143, 2022, Pages 26-43, ISSN 0888-613X, [[Link]](https://www.sciencedirect.com/science/article/pii/S0888613X21002231).
 
 
 # use "yes" to display the email contact button,
