--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,10 @@ more_content: |
     
     **Articles in referred journals**
     
+<p align="center">
     1. Corradin R., **Danese L.**, Ongaro A (2022). Bayesian nonparametric change point detection for multivariate time series with missing observations, 
     *International Journal of Approximate Reasoning*, Volume 143, 2022, Pages 26-43, ISSN 0888-613X, [[Link]](https://www.sciencedirect.com/science/article/pii/S0888613X21002231).
-
+</p>
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
