--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,12 @@ more_content: |
     detection for multivariate time series with missing observations, 
     *International Journal of Approximate Reasoning*, Volume 143, 2022, Pages 26-43, 
     ISSN 0888-613X, [[Link]](https://www.sciencedirect.com/science/article/pii/S0888613X21002231).
+    
+resume_header_intro: |
+
+*Prova*
+
+1. Ciao!!
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
