--- a/_config.yml
+++ b/_config.yml
@@ -31,16 +31,11 @@ more_content: |
     
     **Articles in referred journals**
     
-    1. Corradin R., **Danese L.**, Ongaro A. (2022). Bayesian nonparametric change point 
-    detection for multivariate time series with missing observations, 
-    *International Journal of Approximate Reasoning*, Volume 143, 2022, Pages 26-43, 
-    ISSN 0888-613X, [[Link]](https://www.sciencedirect.com/science/article/pii/S0888613X21002231).
+    1. Corradin R., **Danese L.**, Ongaro A. (2022). Bayesian nonparametric change point <br />
+    detection for multivariate time series with missing observations, <br />
+    *International Journal of Approximate Reasoning*, Volume 143, 2022, Pages 26-43, <br />
+    ISSN 0888-613X, [[Link]](https://www.sciencedirect.com/science/article/pii/S0888613X21002231).<br />
     
-resume_header_intro: |
-
-*Prova*
-
-1. Ciao!!
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
