--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@ resume_name:                    "Luca Danese"
 resume_title:                   "PhD Student in Statistics"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "lisasimpson@youremailaddress.com"
+resume_contact_email:           "l.danese1@campus.unimib.it"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 resume_contact_telephone:       "555-7334"
 resume_contact_address:         "742 Evergreen Terrace, Springfield"
 
-resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
+resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • l.danese1@campus.unimib.it"
 display_header_contact_info:    "false"
 
 resume_header_intro: "<p>I'm a Phd student in Statistics at the University of Milano - Bicocca. I was born in Milan (Italy) where I currently live. I'm interested in Bayesian Nonparametric Statistics and Computational Statistics</p>"
