--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ resume_contact_telephone:       "555-7334"
 resume_contact_address:         "742 Evergreen Terrace, Springfield"
 
 resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • l.danese1@campus.unimib.it"
-display_header_contact_info:    "false"
+display_header_contact_info:    "true"
 
 resume_header_intro: "<p>I'm a Phd student in Statistics at the University of Milano - Bicocca. I was born in Milan (Italy) where I currently live. I'm interested in Bayesian Nonparametric Statistics and Computational Statistics</p>"
 
