--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ more_content: |
 
 # Decide which sections to use
 # comment out to hide
-# resume_section_experience:      true
+resume_section_experience:      true
 resume_section_education:       true
 # resume_section_projects:        true
 # resume_section_skills:          true
